added basic html for front and build question generator

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <title></title>
   </head>
   <body>
+
+    <button id="start-game" type="button" name="button">Start game</button>
+
+    <div id="timer-container"></div>
+    <br>
+    <div id="question-container"></div>
+    <br>
+    <div id="answer-container"></div>
+
+    </div>
+
+    <br>
+    <br>
+    <hr>
+
     <h1>Player names and scores</h1>
     <ul id="player-list">
-
     </ul>
 
 
