game now refreshes after correct answers and add strikes after incorrect answers

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div id="question-container"></div>
     <br>
     <div id="answer-container"></div>
+    <br>
+    <div id="correct-counter"></div>
+    <br>
+    <div id="strike-container"></div>
 
     </div>
 
