--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 
     <button id="start-game" type="button" name="button">Start game</button>
 
-    <div id="timer-container"></div>
-    <br>
-    <div id="question-container"></div>
-    <br>
-    <div id="answer-container"></div>
-    <br>
-    <div id="correct-counter"></div>
-    <br>
-    <div id="strike-container"></div>
+    <div id="gameplay-container">
+
+        <div id="timer-container"></div>
+        <br>
+        <div id="question-container"></div>
+        <br>
+        <div id="answer-container"></div>
+        <br>
+        <div id="correct-counter"></div>
+        <br>
+        <div id="strike-container"></div>
+        <br>
+        <div id="post-game-option-container"></div>
+
+        </div>
 
     </div>
 
