--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <div id="correct-counter"></div>
     <br>
     <div id="strike-container"></div>
-
+<form id="usernameInput">
+  <label for="user"></label>
+  <input type="text" id="user" placeholder="Please enter your name to start the game..">
+  <input type="button" value="Enter" id="button">
+</form>
     </div>
 
     <br>
