renamed gameplay containers

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
 
     <h1>Mental Math</h1>
-    
+
     <div id="gameplay-container">
         <div id="timer-container"></div>
         <div id="question-container"></div>
         <div id="answer-container"></div>
-        <div id="correct-counter"></div>
+        <div id="correct-answer-container"></div>
         <div id="strike-container"></div>
         <div id="post-game-option-container"></div>
     </div>
