--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
 
     <div id="login-container">
-      <form id="usernameInput">
+      <form id="login-form">
         <label for="user"></label>
-        <input id="user" type="text"  placeholder="Please enter your name to start the game..">
-        <input id="button" type="button" value="Enter" >
+        <input id="login-field" type="text" placeholder="Enter username">
+        <input id="login-button" type="button" value="Login">
       </form>
-        <button id="start-game" type="button" name="button">Start game</button>
+        <button id="start-game-button" type="button" name="button">Start game</button>
     </div>
 
     <hr>
