--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <h1>Game history:</h1>
     <ul id="player-list"></ul>
 
-    <!-- <script src="src/game.js" charset="utf-8"></script> -->
-    <!-- <script src="src/user.js" charset="utf-8"></script> -->
+    <script src="src/game.js" charset="utf-8"></script>
+    <script src="src/user.js" charset="utf-8"></script>
     <script src="src/index.js" charset="utf-8"></script>
   </body>
 </html>
