--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <input id="login-button" type="button" value="Login">
       </form>
         <button id="start-game-button" type="button" name="button">Start game</button>
+        <button id="open-scoreboard-button" type="button" name="button">View scoreboard</button>
     </div>
+
+
 
     <hr>
 
